BUG2407 [P] Fixed appearance of horizontal scrolling
(cherry picked from commit e5872c15ef5cb2d312c039e71c407e272b6ff47f)

--- a/src/client/src/Foundation/UI/common/scss/common.scss
+++ b/src/client/src/Foundation/UI/common/scss/common.scss
@@ -145,9 +145,3 @@ table {
 .container {
   overflow: hidden;
 }
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
